--- a/styles/components/sidepanel/payment.module.scss
+++ b/styles/components/sidepanel/payment.module.scss
@@ -1,6 +1,27 @@
 .paymentContainer {
     padding: 25px;
+    position: relative;
 
+    .closedBtn {
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        cursor: pointer;
+        z-index: 2;
+
+        svg {
+            width: auto;
+            height: 30px;
+
+            circle {
+                fill: #656d4a;
+            }
+
+            path {
+                fill: #fff;
+            }
+        }
+    }
 
     .serviceTitle {
         font-size: 20px;
@@ -127,9 +148,426 @@
             .loadingText {
                 font-size: 13px;
                 text-align: center;
+            }
 
+            .errorText {
+                font-size: 13px;
+                text-align: center;
+                color: #e06666;
             }
         }
     }
 
+}
+
+@media only screen and (min-width: 1400px) and (max-width: 1600px) {
+    .paymentContainer {
+        padding: 25px;
+
+
+        .serviceTitle {
+            font-size: 20px;
+        }
+
+        .paymentFrom {
+            .calendarForm {
+                flex: 0 0 70%;
+
+                input {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                select {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                textarea {
+                    height: 90px;
+                    font-size: 13px;
+                }
+
+                p {
+                    font-size: 13px;
+                    margin-bottom: 5px;
+                }
+
+            }
+
+            .paymentOut {
+                flex: 0 0 25%;
+
+                .totalAmount {
+                    margin-top: 10px;
+                    padding: 15px;
+
+                    .tit {
+                        font-size: 16px;
+                    }
+
+                    .price {
+                        font-size: 18px;
+                    }
+                }
+
+                .checkoutBtn {
+                    height: 40px;
+                }
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 1300px) and (max-width: 1399px) {
+    .paymentContainer {
+        padding: 25px;
+
+
+        .serviceTitle {
+            font-size: 20px;
+        }
+
+        .paymentFrom {
+            .calendarForm {
+                flex: 0 0 70%;
+
+                input {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                select {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                textarea {
+                    height: 90px;
+                    font-size: 13px;
+                }
+
+                p {
+                    font-size: 13px;
+                    margin-bottom: 5px;
+                }
+
+            }
+
+            .paymentOut {
+                flex: 0 0 25%;
+
+                .totalAmount {
+                    margin-top: 10px;
+                    padding: 15px;
+
+                    .tit {
+                        font-size: 16px;
+                    }
+
+                    .price {
+                        font-size: 18px;
+                    }
+                }
+
+                .checkoutBtn {
+                    height: 40px;
+                }
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 1100px) and (max-width: 1299px) {
+    .paymentContainer {
+        padding: 25px;
+
+
+        .serviceTitle {
+            font-size: 20px;
+        }
+
+        .paymentFrom {
+            .calendarForm {
+                flex: 0 0 70%;
+
+                input {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                select {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                textarea {
+                    height: 90px;
+                    font-size: 13px;
+                }
+
+                p {
+                    font-size: 13px;
+                    margin-bottom: 5px;
+                }
+
+            }
+
+            .paymentOut {
+                flex: 0 0 25%;
+
+                .totalAmount {
+                    margin-top: 10px;
+                    padding: 15px;
+
+                    .tit {
+                        font-size: 16px;
+                    }
+
+                    .price {
+                        font-size: 18px;
+                    }
+                }
+
+                .checkoutBtn {
+                    height: 40px;
+                }
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 900px) and (max-width:1099px) {
+    .paymentContainer {
+        padding: 25px;
+
+
+        .serviceTitle {
+            font-size: 20px;
+        }
+
+        .paymentFrom {
+            .calendarForm {
+                flex: 0 0 70%;
+
+                input {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                select {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                textarea {
+                    height: 90px;
+                    font-size: 13px;
+                }
+
+            }
+
+            .paymentOut {
+                flex: 0 0 25%;
+
+                .totalAmount {
+                    margin-top: 10px;
+                    padding: 15px;
+
+                    .tit {
+                        font-size: 16px;
+                    }
+
+                    .price {
+                        font-size: 18px;
+                    }
+                }
+
+                .checkoutBtn {
+                    height: 40px;
+                }
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width:899px) {
+    .paymentContainer {
+        padding: 20px;
+
+
+        .serviceTitle {
+            font-size: 20px;
+        }
+
+        .paymentFrom {
+            flex-wrap: wrap;
+
+            .calendarForm {
+                flex: 0 0 100%;
+
+                input {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                select {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                textarea {
+                    height: 90px;
+                    font-size: 13px;
+                }
+
+            }
+
+            .paymentOut {
+                flex: 0 0 100%;
+                margin-top: 20px;
+
+                .totalAmount {
+                    margin-top: 10px;
+                    padding: 10px;
+
+                    .tit {
+                        font-size: 16px;
+                    }
+
+                    .price {
+                        font-size: 18px;
+                    }
+                }
+
+                .checkoutBtn {
+                    height: 40px;
+                }
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width:767px) {
+    .paymentContainer {
+        padding: 20px;
+
+
+        .serviceTitle {
+            font-size: 20px;
+        }
+
+        .paymentFrom {
+            flex-wrap: wrap;
+
+            .calendarForm {
+                flex: 0 0 100%;
+
+                input {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                select {
+                    height: 45px;
+                    font-size: 13px;
+                }
+
+                textarea {
+                    height: 90px;
+                    font-size: 13px;
+                }
+
+            }
+
+            .paymentOut {
+                flex: 0 0 100%;
+                margin-top: 20px;
+
+                .totalAmount {
+                    margin-top: 10px;
+                    padding: 10px;
+
+                    .tit {
+                        font-size: 16px;
+                    }
+
+                    .price {
+                        font-size: 18px;
+                    }
+                }
+
+                .checkoutBtn {
+                    height: 40px;
+                }
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 0px) and (max-width: 575px) {
+    .paymentContainer {
+        padding: 15px;
+
+
+        .serviceTitle {
+            font-size: 20px;
+        }
+
+        .paymentFrom {
+            flex-wrap: wrap;
+
+            .calendarForm {
+                flex: 0 0 100%;
+
+                input {
+                    height: 40px;
+                    font-size: 13px;
+                    flex: 0 0 100%;
+                }
+
+                select {
+                    height: 40px;
+                    font-size: 13px;
+                    flex: 0 0 100%;
+                }
+
+                textarea {
+                    height: 80px;
+                    font-size: 13px;
+                }
+
+            }
+
+            .paymentOut {
+                flex: 0 0 100%;
+                margin-top: 20px;
+
+                .totalAmount {
+                    margin-top: 10px;
+                    padding: 10px;
+
+                    .tit {
+                        font-size: 16px;
+                    }
+
+                    .price {
+                        font-size: 18px;
+                    }
+                }
+
+                .checkoutBtn {
+                    height: 40px;
+                    font-size: 13px;
+                }
+            }
+        }
+
+    }
 }
